@@ -1,3 +1,15 @@
+2012-05-22  Xianzhu Wang  <wangxianzhu@chromium.org>
+
+        [Chromium-Android] Fix chromium_android_unittest
+        https://bugs.webkit.org/show_bug.cgi?id=87196
+
+        Not reviewed.
+        Temporarily disable chromium_android_unittest.
+
+        * Scripts/webkitpy/layout_tests/port/chromium_android_unittest.py:
+        (ChromiumAndroidPortTest):
+        (ChromiumAndroidDriverTest):
+
 2012-05-22  Jessie Berlin  <jberlin@apple.com>
 
         WebKitTestRunner needs an implementation of layoutTestController.setDefersLoading
